--- a/Module 1 - Question 1.html
+++ b/Module 1 - Question 1.html
@@ -41,7 +41,7 @@
                 const correctAnswer = ce.parse(`${(d-b)/(a-c)}`);
                 if (answer && correctAnswer) {
                     const isCorrect = answer.isSame(correctAnswer);
-                    feedback.textContent = isCorrect ? "Correct!" : "Incorrect!";
+                    feedback.textContent = isCorrect ? `Correct! Enter ${(5003 * (a + b + c + d)) % 9967} into the box below.` : "Incorrect! Try again.";
                     feedback.style.color = isCorrect ? "green" : "red";
                 } else {
                     feedback.textContent = "Please enter a valid answer.";
@@ -130,7 +130,7 @@
     </div>
     <div class="math-field-container">
         <math-field readonly id="mf">
-            x = \, \placeholder[answer]{\,?}
+            x = \, \placeholder[answer]{\,}
         </math-field>
     </div>
     <div class="button-container">
