--- a/Module 1 - Question 1.html
+++ b/Module 1 - Question 1.html
@@ -29,7 +29,7 @@
             questionElement.innerHTML = `<p>Solve the following equation for \\(x\\)</p><span
                 style="display: flex; margin-top: 2rem; margin-bottom: 2rem; align-items: center; justify-content: center;">
                 \\[
-                `${a}x ${b >= 0 ? '+ ' + b : b} = ${c}x ${d >= 0 ? '+ ' + d : d}`
+                ${a}x ${b >= 0 ? '+ ' + b : b} = ${c}x ${d >= 0 ? '+ ' + d : d}
                 \\]
             </span>`;
             import('https://unpkg.com/mathlive?module').then(mathlive => {
@@ -41,7 +41,7 @@
                 const correctAnswer = ce.parse(`${(d-b)/(a-c)}`);
                 if (answer && correctAnswer) {
                     const isCorrect = answer.isSame(correctAnswer);
-                    feedback.textContent = isCorrect ? `Correct! Enter ${(Math.abs(5003 * (a + b + c + d))) % 9967} into the box below.` : "Incorrect! Try again.";
+                    feedback.textContent = isCorrect ? `Correct! Enter ${(Math.abs(5003 * (a + b + c + d))) % 9967} into the answer box below.` : "Incorrect! Try again.";
                     feedback.style.color = isCorrect ? "green" : "red";
                 } else {
                     feedback.textContent = "Please enter a valid answer.";
