--- a/Module 1 - Question 2.html
+++ b/Module 1 - Question 2.html
@@ -42,7 +42,7 @@
                 const correctAnswer = ce.parse(`${c*e-b-a*d/(a-c)}`);
                 if (answer && correctAnswer) {
                     const isCorrect = answer.isSame(correctAnswer);
-                    feedback.textContent = isCorrect ? `Correct! Enter ${(Math.abs(5003 * (a + b + c + d + e))) % 9967} into the answer box below.` : "Incorrect! Try again.";
+                    feedback.textContent = isCorrect ? `Correct! Enter ${(Math.abs(5003 * (a + b + c + d + e))) % 9967} into the answer box below.` : `Incorrect! Try again.${correctAnswer}${answer}`;
                     feedback.style.color = isCorrect ? "green" : "red";
                 } else {
                     feedback.textContent = "Please enter a valid answer.";
