--- a/Module 1 - Question 2.html
+++ b/Module 1 - Question 2.html
@@ -39,10 +39,10 @@
 
             function provideFeedback() {
                 const answer = ce.parse(mf.getPromptValue("answer"));
-                const correctAnswer = ce.parse(`${c*e-b-a*d/(a-c)}`);
+                const correctAnswer = ce.parse(`${(c*e-b-a*d)/(a-c)}`);
                 if (answer && correctAnswer) {
                     const isCorrect = answer.isSame(correctAnswer);
-                    feedback.textContent = isCorrect ? `Correct! Enter ${(Math.abs(5003 * (a + b + c + d + e))) % 9967} into the answer box below.` : `Incorrect! Try again.${correctAnswer}${answer}`;
+                    feedback.textContent = isCorrect ? `Correct! Enter ${(Math.abs(5003 * (a + b + c + d + e))) % 9967} into the answer box below.` : `Incorrect! Try again.`;
                     feedback.style.color = isCorrect ? "green" : "red";
                 } else {
                     feedback.textContent = "Please enter a valid answer.";
