--- a/Module 1 - Question 1.html
+++ b/Module 1 - Question 1.html
@@ -26,7 +26,7 @@
             }
 
             const { a, b, c, d } = getQueryParams();
-            questionElement.innerHTML = `<p>Solve the following equation for \\(x\\)</p><span
+            questionElement.innerHTML = `<p>Solve the following equation for \\(x\\). Make sure to simplify completely and leave as a fraction.</p><span
                 style="display: flex; margin-top: 2rem; margin-bottom: 2rem; align-items: center; justify-content: center;">
                 \\[
                 ${a}x ${b >= 0 ? '+ ' + b : b} = ${c}x ${d >= 0 ? '+ ' + d : d}
