Update Module 1 - Question 3.html

--- a/Module 1 - Question 3.html
+++ b/Module 1 - Question 3.html
@@ -125,7 +125,7 @@
     </div>
     <div class="math-field-container">
         <math-field readonly id="mf">
-            x = \, \placeholder[answer]{\,}
+            \placeholder[answer]{\,}
         </math-field>
     </div>
     <div class="button-container">
