--- a/Module 1 - Question 3.html
+++ b/Module 1 - Question 3.html
@@ -36,7 +36,7 @@
                 const correctAnswer = ce.parse(`y=-${c/d}x+${b+a*c/d}`);
                 if (answer && correctAnswer) {
                     const isCorrect = answer.isSame(correctAnswer);
-                    feedback.textContent = isCorrect ? `Correct! Enter ${(Math.abs(5003 * (a + b + c + d))) % 9967} into the answer box below.` : `Incorrect! Try again.`;
+                    feedback.textContent = isCorrect ? `Correct! Enter ${(Math.abs(5003 * (100 + a * b * c * d))) % 9967} into the answer box below.` : `Incorrect! Try again.`;
                     feedback.style.color = isCorrect ? "green" : "red";
                 } else {
                     feedback.textContent = "Please enter a valid answer.";
