--- a/Module 2 - Question 1.html
+++ b/Module 2 - Question 1.html
@@ -32,10 +32,10 @@
 
             function provideFeedback() {
                 const answer = ce.parse(mf.getPromptValue("answer"));
-                const correctAnswer = ce.parse(`(-infty,${(c+b)/(a)})`);
+                const correctAnswer = ce.parse(`(-\\infty,${(c+b)/(a)})`);
                 if (answer && correctAnswer) {
                     const isCorrect = answer.isEqual(correctAnswer);
-                    feedback.textContent = isCorrect ? `Correct! Enter ${(Math.abs(5003 * (100 + a * b * c))) % 9967} into the answer box below.` : `Incorrect! Try again. ${answer}, ${correctAnswer}`;
+                    feedback.textContent = isCorrect ? `Correct! Enter ${(Math.abs(5003 * (100 + a * b * c))) % 9967} into the answer box below.` : `Incorrect! Try again.`;
                     feedback.style.color = isCorrect ? "green" : "red";
                 } else {
                     feedback.textContent = "Please enter a valid answer.";
