--- a/Module 2 - Question 2.html
+++ b/Module 2 - Question 2.html
@@ -21,7 +21,7 @@
                     a: +(params.get("a") ?? "2"),
                     b: +(params.get("b") ?? "1"),
                     c: +(params.get("c") ?? "6"),
-                    c: +(params.get("c") ?? "1"),
+                    c: +(params.get("d") ?? "1"),
                 };
             }
 
