Update Module 2 - Question 2.html

--- a/Module 2 - Question 2.html
+++ b/Module 2 - Question 2.html
@@ -21,7 +21,7 @@
                     a: +(params.get("a") ?? "2"),
                     b: +(params.get("b") ?? "1"),
                     c: +(params.get("c") ?? "6"),
-                    c: +(params.get("d") ?? "1"),
+                    d: +(params.get("d") ?? "1"),
                 };
             }
 
@@ -36,7 +36,7 @@
                 const correctAnswer = ce.parse(`(-\\infty,${(-b-d)/(a-c)})`);
                 if (answer && correctAnswer) {
                     const isCorrect = answer.isEqual(correctAnswer);
-                    feedback.textContent = isCorrect ? `Correct! Enter ${(Math.abs(5003 * (100 + a * b * c))) % 9967} into the answer box below.` : `Incorrect! Try again.`;
+                    feedback.textContent = isCorrect ? `Correct! Enter ${(Math.abs(5003 * (100 + a * b * c * d))) % 9967} into the answer box below.` : `Incorrect! Try again.`;
                     feedback.style.color = isCorrect ? "green" : "red";
                 } else {
                     feedback.textContent = "Please enter a valid answer.";
