--- a/Module 2 - Question 3.html
+++ b/Module 2 - Question 3.html
@@ -28,7 +28,7 @@
             }
 
             const { a, b, c, d, e, f } = getQueryParams();
-            questionElement.innerHTML = `<p>Solve the inequality \\(${a}(x+${b})+${c} &gt; ${d}x+${e}+${f}x\\) for \\(x\\).<br>Write your answer in Interval Notation. If you need to use \\(\\infty\\), you can type "infty" all lowercase.</p>`;
+            questionElement.innerHTML = `<p>Solve the inequality \\(${a}(x${b})+${c} &gt; ${d}x${e}${f}x\\) for \\(x\\).<br>Write your answer in Interval Notation. If you need to use \\(\\infty\\), you can type "infty" all lowercase.</p>`;
             import('https://unpkg.com/mathlive?module').then(mathlive => {
                 mathlive.renderMathInDocument();
             });
