Update Module 2 - Question 4.html

--- a/Module 2 - Question 4.html
+++ b/Module 2 - Question 4.html
@@ -24,7 +24,7 @@
             }
 
             const { a, b } = getQueryParams();
-            questionElement.innerHTML = `<p>Solve the inequality \\(|x+${a}| &gt; ${b}\\) for \\(x\\).<br>Fully simplify, and write your answer in Interval Notation. If you need to use \\(\\infty\\), you can type "\\infty" and click [enter].</p>`;
+            questionElement.innerHTML = `<p>Solve the inequality \\(|x+${a}| &gt; ${b}\\) for \\(x\\).<br>Fully simplify, and write your answer in Interval Notation. If you need to use \\(\\infty\\), you can type <b>\\infty</b> and click [enter].</p>`;
             import('https://unpkg.com/mathlive?module').then(mathlive => {
                 mathlive.renderMathInDocument();
             });
