Update Module 2 - Question 3.html

--- a/Module 2 - Question 3.html
+++ b/Module 2 - Question 3.html
@@ -35,7 +35,7 @@
 
             function provideFeedback() {
                 const answer = ce.parse(mf.getPromptValue("answer"));
-                const correctAnswer = ce.parse(`(-\\infty,${(-(a*b)-c+e)/(a-d-f)})`);
+                const correctAnswer = ce.parse(`(-\\infty,${-(a*b)-c+e}/${a-d-f})`);
                 if (answer && correctAnswer) {
                     const isCorrect = answer.isEqual(correctAnswer);
                     feedback.textContent = isCorrect ? `Correct! Enter ${(Math.abs(5003 * (100 + a * b * c * d * e * f))) % 9967} into the answer box below.` : `Incorrect! Try again.`;
