--- a/Module 2 - Question 2.html
+++ b/Module 2 - Question 2.html
@@ -33,7 +33,7 @@
 
             function provideFeedback() {
                 const answer = ce.parse(mf.getPromptValue("answer"));
-                const correctAnswer = ce.parse(`(-\\infty,${(-b-d)/(a-c)})`);
+                const correctAnswer = ce.parse(`(-\\infty,${-b-d}/${a-c})`);
                 if (answer && correctAnswer) {
                     const isCorrect = answer.isEqual(correctAnswer);
                     feedback.textContent = isCorrect ? `Correct! Enter ${(Math.abs(5003 * (100 + a * b * c * d))) % 9967} into the answer box below.` : `Incorrect! Try again.`;
